--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 env:
-  DOTNET_VERSION: 8.0.x
+  DOTNET_VERSION: 8.0.404
   CONFIGURATION: Release
   SOLUTION_PATH: src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.sln
   ANDROID_TFM: net8.0-android
@@ -36,9 +36,9 @@ jobs:
       - name: Install MAUI workload
         run: dotnet workload install maui
 
-      # Restore NuGet packages once to reuse across builds
-      - name: Restore packages
-        run: dotnet restore ${{ env.SOLUTION_PATH }}
+      # Restore only the Windows target to avoid pulling unsupported TFMs on this runner
+      - name: Restore packages (Windows TFM)
+        run: dotnet restore ${{ env.SOLUTION_PATH }} -p:TargetFramework=${{ env.WINDOWS_TFM }}
 
       # Publish an unsigned MSIX/AppxBundle for Windows
       - name: Publish Windows package
@@ -84,9 +84,9 @@ jobs:
       - name: Install MAUI Android workload
         run: dotnet workload install maui-android
 
-      # Restore NuGet packages once to reuse across Android outputs
-      - name: Restore packages
-        run: dotnet restore ${{ env.SOLUTION_PATH }}
+      # Restore only the Android target to avoid pulling unsupported TFMs on this runner
+      - name: Restore packages (Android TFM)
+        run: dotnet restore ${{ env.SOLUTION_PATH }} -p:TargetFramework=${{ env.ANDROID_TFM }}
 
       # Publish an unsigned APK (good for device installs)
       - name: Publish Android APK
