--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ env:
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+  PROJECT_PATH: src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
 
 jobs:
   windows:
@@ -34,10 +35,10 @@ jobs:
         run: dotnet workload install maui
 
       - name: Restore packages (Windows TFM)
-        run: dotnet restore ${{ env.SOLUTION_PATH }} -p:TargetFramework=${{ env.WINDOWS_TFM }}
+        run: dotnet restore ${{ env.PROJECT_PATH  }} -p:TargetFramework=${{ env.WINDOWS_TFM }}
 
       - name: Publish Windows package
-        run: dotnet publish ${{ env.SOLUTION_PATH }} -f ${{ env.WINDOWS_TFM }} -c ${{ env.CONFIGURATION }} -p:WindowsPackageType=msix -p:AppxPackageSigningEnabled=false
+        run: dotnet publish ${{ env.PROJECT_PATH  }} -f ${{ env.WINDOWS_TFM }} -c ${{ env.CONFIGURATION }} -p:WindowsPackageType=msix -p:AppxPackageSigningEnabled=false
 
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
@@ -74,13 +75,13 @@ jobs:
         run: dotnet workload install maui-android
 
       - name: Restore packages (Android TFM)
-        run: dotnet restore ${{ env.SOLUTION_PATH }} -p:TargetFramework=${{ env.ANDROID_TFM }}
+        run: dotnet restore ${{ env.PROJECT_PATH  }} -p:TargetFramework=${{ env.ANDROID_TFM }}
 
       - name: Publish Android APK
-        run: dotnet publish ${{ env.SOLUTION_PATH }} -f ${{ env.ANDROID_TFM }} -c ${{ env.CONFIGURATION }} -p:AndroidPackageFormat=apk -p:AndroidSignPackage=false
+        run: dotnet publish ${{ env.PROJECT_PATH  }} -f ${{ env.ANDROID_TFM }} -c ${{ env.CONFIGURATION }} -p:AndroidPackageFormat=apk -p:AndroidSignPackage=false
 
       - name: Publish Android AAB
-        run: dotnet publish ${{ env.SOLUTION_PATH }} -f ${{ env.ANDROID_TFM }} -c ${{ env.CONFIGURATION }} -p:AndroidPackageFormat=aab -p:AndroidSignPackage=false
+        run: dotnet publish ${{ env.PROJECT_PATH  }} -f ${{ env.ANDROID_TFM }} -c ${{ env.CONFIGURATION }} -p:AndroidPackageFormat=aab -p:AndroidSignPackage=false
 
       - name: Upload Android APK
         uses: actions/upload-artifact@v4
