Renommage de l'artefact android-apk --> com.companyname.pcloudphotoorganizer-apk

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Upload Android APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
+          name: com.companyname.pcloudphotoorganizer-apk
           if-no-files-found: error
           path: src/pCloudPhotoOrganizer/bin/${{ env.CONFIGURATION }}/${{ env.ANDROID_TFM }}/**/*.apk
 
