--- a/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
+++ b/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <!-- TFM par défaut : Android uniquement -->
         <TargetFrameworks>net9.0-android35.0</TargetFrameworks>
-        
+        <MinSdkVersion>33</MinSdkVersion>
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 
