--- a/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
+++ b/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <!-- TFM par défaut : Android uniquement -->
@@ -31,6 +31,8 @@
         <!-- Versions -->
         <ApplicationDisplayVersion>0.1.1</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
+        <PackageVersion>0.1.1</PackageVersion>
+        <Version>0.1.1</Version>
 
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
