--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
           APK_DIR="src/pCloudPhotoOrganizer/bin/${{ env.CONFIGURATION }}/${{ env.ANDROID_TFM }}/publish"
           ls -la "$APK_DIR"
 
-          mv "$APK_DIR"/*.apk \
+          mv "$APK_DIR"/*-Signed.apk \
              "$APK_DIR/${{ env.ANDROID_APK_NAME }}"
 
       - name: Publish Android AAB
@@ -121,7 +121,7 @@ jobs:
         with:
           name: com.companyname.pcloudphotoorganizer-apk
           if-no-files-found: error
-          path: src/pCloudPhotoOrganizer/bin/${{ env.CONFIGURATION }}/${{ env.ANDROID_TFM }}/publish/*.apk
+          path: src/pCloudPhotoOrganizer/bin/${{ env.CONFIGURATION }}/${{ env.ANDROID_TFM }}/publish/${{ env.ANDROID_APK_NAME }}
 
       - name: Upload Android AAB
         uses: actions/upload-artifact@v4
@@ -136,3 +136,11 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: beta
           assets: "*.apk"
+
+      - name: Upload APK to beta release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: beta
+          prerelease: true
+          files: |
+              src/pCloudPhotoOrganizer/bin/${{ env.CONFIGURATION }}/${{ env.ANDROID_TFM }}/publish/${{ env.ANDROID_APK_NAME }}
