--- a/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
+++ b/src/pCloudPhotoOrganizer/pCloudPhotoOrganizer.csproj
@@ -100,4 +100,8 @@
         </MauiXaml>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="src\pCloudPhotoOrganizer\Resources\Raw\" />
+    </ItemGroup>
+
 </Project>
